cabal-version:   3.12
name:            tmp-KFxIG14S2p
version:         0.1.0.0
license:         NONE
author:          Rodrigo Mesquita
maintainer:      rodrigo.m.mesquita@gmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable tmp-KFxIG14S2p
    import:           warnings
    main-is:          Main.hs
    build-depends:    base, derive-has-field
    hs-source-dirs:   app
    default-language: Haskell2010
